--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.7",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
+    "react-native-gesture-handler": "^1.5.6",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "^0.6.4",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
     "react-navigation-header-buttons": "^3.0.5",
+    "react-navigation-stack": "^2.2.3",
+    "react-navigation-tabs": "^2.8.2",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
