--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
     "expo": "~36.0.0",
+    "expo-font": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.4",
