--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/blur": "^3.4.1",
     "@react-native-community/masked-view": "^0.1.7",
     "expo": "~36.0.0",
     "expo-font": "~8.0.0",
