--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-simple-toast": "^1.0.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
     "react-navigation-header-buttons": "^3.0.5",
@@ -28,6 +32,7 @@
     "react-navigation-tabs": "^2.8.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "upgrade": "^1.1.0"
   },
   "devDependencies": {
