--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/blur": "^3.4.1",
-    "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/masked-view": "0.1.5",
     "expo": "~36.0.0",
     "expo-font": "~8.0.0",
+    "expo-linear-gradient": "~8.0.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -21,9 +22,10 @@
     "react-native-gesture-handler": "^1.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.6.0",
+    "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-reanimated": "^1.4.0",
-    "react-native-safe-area-context": "^0.6.4",
-    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-safe-area-context": "^0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-simple-toast": "^1.0.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
