--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "expo": "^37.0.0",
+    "expo-av": "~8.1.0",
     "expo-font": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "moment": "^2.24.0",
